samples/_failures_safe/1761720121_2ce8f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49ba9f0a.c: In function ‘main’:
./samples/SAFE/__tmp_49ba9f0a.c:141:5: error: expected declaration or statement at end of input
  141 |     for (size_t i = 0; i < a.rows; i++) {
      |     ^~~
./samples/SAFE/__tmp_49ba9f0a.c:141:5: error: expected declaration or statement at end of input
